# value-investing-platform

./: .env.example  .gitignore  README.md  check_db.py  pyproject.toml  requirements.txt
app/: main.py  schemas.py  services.py
automation/: jobs.py  scheduler.py
backend/: main.py
data_pipeline/: collector.py  normalizers.py  storage.py
database/: base.py  init_db.py  models.py  session.py
frontend/: index.html  script.js  styles.css
screens/: metrics.py  screeners.py
src/value_investing_platform/: __init__.py  api.py  screener.py
tests/: conftest.py  test_gateway_resilience.py  test_metrics.py  test_normalizers.py  test_screens.py  test_value_score_engine.py
