[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "value-investing-platform"
version = "1.0.0"
description = "Production-ready value investing analytics platform"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
